Được tạo bằng Colaboratory

--- a/thongkemota1.ipynb
+++ b/thongkemota1.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1LaKPsaKRFy4m4MLx1NzcAgcczPHbvr6W",
-      "authorship_tag": "ABX9TyNBK9u4f5K1EGqTm7+/GIUp",
+      "authorship_tag": "ABX9TyMYLZxDP4WpSUhxohelkB/Y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "metadata": {
         "id": "BIyle6TIbax4"
       },
@@ -75,7 +75,7 @@
         },
         "outputId": "4608b68f-0173-4691-ea31-ab56b9615695"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1590,7 +1590,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**vẽ biểu đồ boxplot cho tập dữ liệu**\n"
+        "**b. Vẽ biểu đồ boxplot cho tập dữ liệu**\n"
       ],
       "metadata": {
         "id": "GdKbZGJtnNur"
@@ -1647,6 +1647,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**c. Vẽ biểu đồ histogram (với bins = 100) cho tập dữ liệu này**"
+      ],
+      "metadata": {
+        "id": "hwvFDdGER-Ml"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "df.hist(bins=100,figsize=(20,15))"
@@ -1655,30 +1664,30 @@
         "id": "HP7emDPRnXfz",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 806
+          "height": 1000
         },
-        "outputId": "d0a8a76d-2d08-4486-9e16-a099494e0210"
+        "outputId": "3e891c20-266f-4891-b024-7eb4700a06c6"
       },
-      "execution_count": null,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7f4971535bd0>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4971491110>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f497139fc50>],\n",
-              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f4970f73610>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4970f9cc10>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4970f54250>],\n",
-              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f4970f078d0>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4970ebee10>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4970ebee50>]],\n",
+              "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7f49275f4750>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f49272e8810>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f492722e250>],\n",
+              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f4927262750>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4927218c50>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f49271da190>],\n",
+              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f4927191710>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4927145b50>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f4927145b90>]],\n",
               "      dtype=object)"
             ]
           },
           "metadata": {},
-          "execution_count": 37
+          "execution_count": 72
         },
         {
           "output_type": "display_data",
@@ -1720,7 +1729,7 @@
         },
         "outputId": "951d0dc4-ddcd-49ca-a034-c2947e877305"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1750,7 +1759,7 @@
         },
         "outputId": "37bb8b45-d4e7-407c-ed65-964e4bc60bda"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
