Được tạo bằng Colaboratory

--- a/pandas02.ipynb
+++ b/pandas02.ipynb
@@ -6,7 +6,7 @@
       "name": "pandas02",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOXm3yY8E50hnzy3ebZiYVd",
+      "authorship_tag": "ABX9TyM/8UjxnVi6uXtZvF6U39EQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,13 +37,13 @@
       "metadata": {
         "id": "U-3LkGIpREPn"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Câu 1: Tạo các Series với kích thước 1x10 thỏa mãn yêu cầu:\n",
+        "**Câu 1: Tạo các Series với kích thước 1x10 thỏa mãn yêu cầu:**\n",
         "- Series 1: có tên là “Họ và tên” và dữ liệu (định tính) do bạn tự nhập vào\n",
         "- Series 2: có tên là “Ngày sinh” & dữ liệu do bạn tự nhập vào\n",
         "- Series 3: có tên là “Tiền công/h” có dữ liệu định lượng do bạn tự nhập\n",
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "zsMC9-ydPWbD",
         "colab": {
@@ -110,7 +110,7 @@
         },
         "outputId": "8ee1389a-c64b-41a6-afa1-185d8abe2740"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -327,7 +327,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Câu 2: Khởi tạo dataframe bằng các phương pháp khác nhau, hãy:\n",
+        "**Câu 2: Khởi tạo dataframe bằng các phương pháp khác nhau, hãy:**\n",
         "- Tạo dataframe có kích thước 10x3 từ cấu trúc list tương ứng, với dữ liệu cho dataframe\n",
         "này gồm các cột Họ tên, Tuổi và Giới tính. Xuất kết quả ra màn hình;\n"
       ],
@@ -352,7 +352,7 @@
         },
         "outputId": "6327b949-9d70-43e0-f056-8836a08eac83"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -571,7 +571,7 @@
         },
         "outputId": "e1e0a0d4-27b4-45fb-9ae4-0d0d0966c3c8"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -787,7 +787,7 @@
         },
         "outputId": "b4670118-c9f2-4088-9e4d-609e6112dadf"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1003,7 +1003,7 @@
         },
         "outputId": "ede2109d-aa6b-43b2-d3bb-ec2eeb11415f"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
