Được tạo bằng Colaboratory

--- a/Sinh_du_lieu_ngau_nhien_nangcao.ipynb
+++ b/Sinh_du_lieu_ngau_nhien_nangcao.ipynb
@@ -240,15 +240,39 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "DjgwM1JnuREh"
-      },
-      "outputs": [],
+      "cell_type": "markdown",
       "source": [
-        ""
-      ]
+        "# **Hàm arange**\n",
+        "\n",
+        "Có mục đích là sinh dữ liệu có giá trị cách đều nhau trong một khoảng giá trị cho trước.\n",
+        "\n",
+        "> **numpy.arange([start, ]stop, [step, ]dtype=None, *, like=None)**\n",
+        "\n",
+        "- start (cận dưới) mặc định là 0; \n",
+        "- stop là cận trên; \n",
+        "- step khoảng cách giữa các giá trị (mặc định là 1); \n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "## **Hàm choice**\n",
+        "\n",
+        "Sinh ngẫu nhiên một mẫu từ một mảng 1 chiều.\n",
+        "\n",
+        "> **random.choice(a, size=None, replace=True, p=None)**\n",
+        "\n",
+        "Trong đó:\n",
+        "\n",
+        "- a là một mảng 1 chiều (vector) hay một số nguyên (khi này hoạt động tương tự hàm arange)\n",
+        "- size là kích thước mẫu được sinh ra\n",
+        "- replace\n",
+        "- p là mảng 1 chiều đặc tả xác suất tương ứng với mỗi phần tử của a. Nếu không có p thì mặc định sinh ngẫu nhiên theo phân phối chuẩn"
+      ],
+      "metadata": {
+        "id": "Z_E8VCV8zeyA"
+      }
     }
   ],
   "metadata": {
