Được tạo bằng Colaboratory

--- a/Kiểm_định_AB.ipynb
+++ b/Kiểm_định_AB.ipynb
@@ -421,16 +421,17 @@
         "mean_a = session_times[session_times.Page == 'Page A'].Time.mean()\n",
         "print(mean_a)\n",
         "mean_b = session_times[session_times.Page == 'Page B'].Time.mean()\n",
-        "print(mean_b)\n"
+        "print(mean_b)\n",
+        "mean_b - mean_a"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "wii2O3LtWGJ1",
-        "outputId": "129c2a1a-b98d-42d9-df31-9163fff1cd26"
+        "outputId": "ebf8bbed-4a55-4cd1-e975-48a6bf693f25"
       },
-      "execution_count": 6,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -439,23 +440,7 @@
             "1.263333333333333\n",
             "1.62\n"
           ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "mean_b - mean_a"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
         },
-        "id": "rl2iwI2CWduV",
-        "outputId": "29db8a8e-4cf9-46aa-ef0d-2a952a8e1ef7"
-      },
-      "execution_count": 7,
-      "outputs": [
         {
           "output_type": "execute_result",
           "data": {
@@ -464,7 +449,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 17
         }
       ]
     },
