Được tạo bằng Colaboratory

--- a/Thuc_hanh_kiem_dinh_z_t.ipynb
+++ b/Thuc_hanh_kiem_dinh_z_t.ipynb
@@ -27,6 +27,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QL4T3DMIhiCO"
+      },
+      "source": [
+        "XÂY DỰNG CHƯƠNG TRÌNH KIỂM ĐỊNH Z (HOẶC T) CHO CÁC BÀI TẬP SAU\n",
+        "\n",
+        "Gợi ý:\n",
+        "\n",
+        "- Số liệu được sinh ngẫu nhiên theo phân phối chuẩn\n",
+        "- Sử dụng gói phần mềm statsmodels để tiến hành kiểm định\n",
+        "- Đối với các bài tập kiểm định giả thuyết thì sinh viên cần phát biểu các giả thuyết (bằng tiếng Việt) $H_{0}$ và $H_{a}$ trước khi lập trình kiểm định"
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         "from scipy import stats\n",
@@ -207,6 +222,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Vì đề bài cho biết độ lệch chuẩn tổng thể nên ta tiến hành z-test\n",
         "#Kiểm định z\n",
         "ztest_Score, p_value= ztest(samples, value = null_mean, alternative='larger')\n",
         "if(p_value <  alpha):\n",
@@ -297,6 +313,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Vì đề bài cho biết độ lệch chuẩn tổng thể nên ta tiến hành z-test\n",
         "#Kiểm định z\n",
         "ztest_Score, p_value= ztest(samples, value = null_mean, alternative='larger')\n",
         "if(p_value <  alpha):\n",
@@ -388,6 +405,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Vì đề bài cho biết độ lệch chuẩn tổng thể nên ta tiến hành z-test\n",
         "#Kiểm định z\n",
         "ztest_Score, p_value= ztest(samples, value = null_mean, alternative='larger')\n",
         "if(p_value <  alpha):\n",
