Được tạo bằng Colaboratory

--- a/Bai_tap_phan_tich_anova_1chieu.ipynb
+++ b/Bai_tap_phan_tich_anova_1chieu.ipynb
@@ -797,15 +797,15 @@
         "\n",
         "Năm loại gốc rễ đã được sử dụng trong một thí nghiệm ghép vườn táo. Dữ liệu sau đây thể hiện mức tăng trưởng mở rộng (cm) sau bốn năm.\n",
         "\n",
-        "X1 = tăng trưởng mở rộng cho loại I\n",
+        "* X1 = tăng trưởng mở rộng cho loại I\n",
         "\n",
-        "X2 = tăng trưởng mở rộng cho loại II\n",
+        "* X2 = tăng trưởng mở rộng cho loại II\n",
         "\n",
-        "X3 = tăng trưởng mở rộng cho loại III\n",
+        "* X3 = tăng trưởng mở rộng cho loại III\n",
         "\n",
-        "X4 = tăng trưởng mở rộng cho loại IV\n",
+        "* X4 = tăng trưởng mở rộng cho loại IV\n",
         "\n",
-        "X5 = tăng trưởng mở rộng cho loại V"
+        "* X5 = tăng trưởng mở rộng cho loại V"
       ],
       "metadata": {
         "id": "k_qRfr_UQ9mt"
@@ -3039,7 +3039,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Bắt đầu tiến hành kiểm định các nhóm có lấy từ phân phối chuẩn** "
+        "**Kiểm tra mẫu có phân phối chuẩn** "
       ],
       "metadata": {
         "id": "RRJU2n93kIan"
